# SL-audioprocess

./: .gitignore  CMakeLists.txt  README.md  build_R328.sh  build_rv1106.sh  log.h  version.h
SL-audioprocess-release-V0.0.1/: c_api.h  nkfsim.mnn
model_loader/: model_loader.h
models/: avg_30.mnn
sample/: AudioFile.h  test_all.cpp  test_audioprocesser.cpp  test_capi_sample.cpp  test_kws_capi.cpp  test_nkf_aec.cpp  test_nkf_capi.cpp  test_ns_capi.cpp  test_signlekws.cpp  test_wekws_capi.cpp
src/: AudioProcess.h  KwsPipeline.cpp  KwsPipeline.h
src/aecm/: CMakeLists.txt
src/c_api/: c_api.cc  c_api.h  c_api_define.h
src/frontend/: fbank.h  feature_pipeline.cc  feature_pipeline.h  postprocess_pipeline.cpp  postprocess_pipeline.h  wav.h
src/kws/: CommandRecognizer.cpp  CommandRecognizer.h  keyword_spotting.cc  keyword_spotting_mnn.cpp  keyword_spotting_mnn.h
src/model_loader/: model_loader.cpp
src/nkf/: mnn_adapter.h  neural_karlman_filter.h
src/ns/: denoise.cpp  denoise.h  pitch.h  rnn.h
src/utils/: keyword_instruction.h
